# livekit-agentscope-voice-agent

./: .env.example  .gitignore  CLAUDE.md  README-zh.md  README.md  agent_server_demo.py  agent_server_with_metrics.py  config.yaml  pyproject.toml
providers/: kokoro_tts.py  local_indexTTS.py  local_indextts_chaos.py  qwen_asr_stt.py
react-native/: README-zh.md  README.md
server/: README-zh.md  README.md  server.py  start_services.sh  stop_services.sh
server/docs/: README-zh.md  README.md
