[project]
name = "livekit-agentscope-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.5",
    "livekit-agents[cartesia,deepgram,elevenlabs,openai,silero,turn-detector]~=1.0",
    "livekit-api>=1.1.0",
    "livekit-plugins-minimax-ai>=1.3.5",
    "uvicorn>=0.38.0",
]
